[package]
name = "template_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

cimvr_common = { path = "/home/exiled/Documents/ChatImprovr/iteration0/common"}
cimvr_engine_interface  = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_interface" }
cimvr_derive_macros = { path = "/home/exiled/Documents/ChatImprovr/iteration0/engine_derive_macros" }
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
