[package]
name = "character_controller"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

cimvr_common = { path = "../iteration0/common"}
cimvr_engine_interface  = { path = "../iteration0/engine_interface" }
cimvr_derive_macros = { path = "../iteration0/engine_derive_macros" }
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
